--- a/fluentsnackbar-sample/src/main/res/values/strings.xml
+++ b/fluentsnackbar-sample/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SnackbarManager sample</string>
+    <string name="app_name">FluentSnackbar sample</string>
     <string name="action_text">Click</string>
 </resources>
